# prisma-visualise

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  apphooks.config.json  schema.prisma  webhooks
Formula/: prsv.rb
http-api/: Cargo.toml
http-api/src/: main.rs
parser-database/src/attributes/: map.rs
parser-database/src/walkers/model/: primary_key.rs
prisma-inspector-service/src/: main.rs  visualise.rs
prisma-inspector-web/: package-lock.json
prisma-inspector-web/src/: App.tsx  index.css  types.ts
prisma-inspector-web/src/components/DisplaySchema/: DisplaySchema.tsx
prisma-value/src/: lib.rs
prismaviz-rust/: Cargo.toml  Shuttle.toml  schema.prisma
prismaviz-rust/http-api/: Cargo.toml  Rocket.toml
prismaviz-rust/http-api/src/: code_highlight.rs  main.rs  visualise.rs
prismaviz-rust/parser-database/src/attributes/: native_types.rs
prismaviz-rust/parser-database/src/walkers/: relation_field.rs  scalar_field.rs
prismaviz-rust/prisma-inspector-service/: Cargo.toml
prismaviz-rust/prisma-inspector-service/src/: code_highlight.rs  visualise.rs
prismaviz-rust/prisma-inspector-web/: package.json
prismaviz-rust/prisma-inspector-web/src/: App.tsx  index.css
prismaviz-rust/psl-core/: Cargo.toml
prismaviz-rust/schema-ast/src/ast/: argument.rs  field.rs  model.rs
prismaviz-rust/schema-highlight/: Cargo.toml
prismaviz-rust/schema-highlight/src/: lib.rs
prismaviz-rust/schema-visualise/src/: attributes.rs  constraints.rs  field_type.rs  lib.rs  relations.rs
prismaviz-web/: index.html  package-lock.json  package.json
prismaviz-web/src/: App.tsx  index.css  types.ts
prismaviz-web/src/components/AppTitle/: AppTitle.module.scss  AppTitle.tsx
prismaviz-web/src/components/DisplaySchema/: DisplaySchema.css  DisplaySchema.tsx
prismaviz-web/src/components/SchemaUpload/: SchemaUpload.module.css  SchemaUpload.tsx
schema-ast/src/ast/: top.rs
schema-visualise/: Cargo.toml
schema-visualise/src/: constraints.rs  lib.rs  main.rs  relations.rs
webhooks/: app.js  package-lock.json  package.json
webhooks/routes/: github.js
(+7 files in other folders)
