[package]
name = "prismaviz"
version = "0.1.0"
description = "A simple command line utility to visualise your prisma schema in your favorite terminal"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
prettytable-rs = "0.10.0"
psl-core = { version = "0.1.0", path = "../psl-core" }
